# whitespace-correction

./: .dockerignore  .flake8  .gitattributes  .gitignore  .gitmodules  Dockerfile  Dockerfile.old  Makefile  README.md  mypy.ini  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
configs/: en_arxiv_data_sources.yaml  eo_lstm_byte.yaml  eo_lstm_char.yaml  eo_moe_transformer_byte_multi.yaml  eo_transformer_byt5.yaml  eo_transformer_byt5_scratch.yaml  eo_transformer_byte.yaml  eo_transformer_byte_multi.yaml  eo_transformer_byte_v1_exact.yaml  eo_transformer_byte_v1_like.yaml  eo_transformer_char.yaml  eo_transformer_char_v1_like.yaml  multi_eo_transformer_byte.yaml  server.json  server.yaml  wiki_data_sources.yaml
configs/data_preprocessing/: base.yaml
configs/losses/: ce.yaml  ce_v1.yaml  focal.yaml  focal_v1.yaml  multi_layer_focal.yaml
configs/models/: byte_transformer_encoder.yaml  encoder_with_head.yaml  transformer.yaml
configs/preprocessings/: whitespace_corruption_byte_multi.yaml  whitespace_noise_byte.yaml  whitespace_noise_byte_v1.yaml  whitespace_noise_char.yaml  whitespace_noise_char_v1.yaml
configs/tokenizers/: byt5_code_points.yaml  byte.yaml  byte_code_points.yaml  byte_multi.yaml  char.yaml  git.yaml
configs/train/: base.yaml
scripts/: generate_eo_visualizations.py  generate_visualizations.py  run_training.sh
src/scripts/: calibrate_eo.py  convert.py  create_tokenizer.py  fuse_lmdbs.py  inspect_lmdb.py  noise_jsonl.py  tune_threshold_eo.py  txt_to_jsonl.py  wikidump_to_jsonl.py  zip_experiment.py
src/trt/: __init__.py  preprocess_data.py  train.py
src/whitespace_correction/: __init__.py  model.py  preprocess_data.py  train.py
src/whitespace_repair/: __init__.py  preprocess_data.py  train.py
test_experiments/eo_medium_transformer_byte@2022-12-02-00_21_03/: logs.txt
test_experiments/eo_medium_transformer_byte@2022-12-02-00_22_37/: logs.txt
test_experiments/eo_medium_transformer_byte@2022-12-02-00_23_14/: logs.txt
tests/: conftest.py  test_preprocess_data.py
tokenization_repair/: .gitignore  Makefile  README.md  help.sh  requirements.txt  welcome.sh
trt/: __init__.py  train.py
trt/utils/: io.py  (+8 more)
whitespace_correction/: README.md  help.sh
(+477 files in other folders)
